// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PitchedRoofCalculator Results component renders correctly 1`] = `
<div>
  <div
    class="FieldContainer"
  >
    <div
      class="head"
    >
      <h6
        class="MuiTypography-root Typography MuiTypography-h6"
      >
        Tiles
      </h6>
    </div>
    <p>
      {
  "rows": [
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "packSize": "-",
      "quantity": 1350
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "packSize": "-",
      "quantity": 30
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "packSize": "-",
      "quantity": 46
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
    </p>
  </div>
  <div
    class="FieldContainer"
  >
    <div
      class="head"
    >
      <h6
        class="MuiTypography-root Typography MuiTypography-h6"
      >
        Ventilation
      </h6>
    </div>
    <p>
      {
  "rows": [
    {
      "category": "ventilation",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "packSize": "-",
      "quantity": 1
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
    </p>
  </div>
  <div
    class="FieldContainer"
  >
    <div
      class="head"
    >
      <h6
        class="MuiTypography-root Typography MuiTypography-h6"
      >
        Accessories
      </h6>
    </div>
    <p>
      {
  "rows": [
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "packSize": "-",
      "quantity": 2
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "packSize": "-",
      "quantity": 100
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "packSize": "-",
      "quantity": 2
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "packSize": "-",
      "quantity": 100
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Test Guttering Grey",
      "externalProductCode": "4391",
      "packSize": "-",
      "quantity": 10
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Test Guttering Hook Grey",
      "externalProductCode": "4392",
      "packSize": "-",
      "quantity": 14
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "packSize": "-",
      "quantity": 2
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Clips",
      "externalProductCode": "113456781",
      "packSize": "-",
      "quantity": 92
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "packSize": "-",
      "quantity": 92
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "packSize": "-",
      "quantity": 267
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Screw",
      "externalProductCode": "113456784",
      "packSize": "-",
      "quantity": 1249
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "packSize": "-",
      "quantity": 1
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "packSize": "-",
      "quantity": 6
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "packSize": "-",
      "quantity": 0
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
    </p>
  </div>
  <div
    class="Alert Alert--first"
  >
    <div
      class="Alert ColorPair ColorPair--alert"
    >
      <div
        class="actions"
      />
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <h5
            class="MuiTypography-root title Typography MuiTypography-h5"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
              />
            </svg>
            Quantities update
          </h5>
          Changing the quantities may affect the accuracy of the estimates.
        </div>
      </div>
    </div>
  </div>
  <div
    class="Alert Alert--last"
  >
    <div
      class="Alert ColorPair ColorPair--alabaster"
    >
      <div
        class="actions"
      />
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <h5
            class="MuiTypography-root title Typography MuiTypography-h5"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
            Need to know
          </h5>
          We’ve added a wastage contingency of: 0% into this material calculation.
        </div>
      </div>
    </div>
  </div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained Button MuiButton-containedPrimary"
    style="margin-bottom: 30px;"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <span
        class="MuiButton-startIcon MuiButton-iconSizeMedium"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z"
          />
        </svg>
      </span>
      Download as PDF
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`PitchedRoofCalculator Results component renders with debugging mode on 1`] = `
<div>
  <div
    class="FieldContainer"
  >
    <div
      class="head"
    >
      <h6
        class="MuiTypography-root Typography MuiTypography-h6"
      >
        Tiles
      </h6>
    </div>
    <p>
      {
  "rows": [
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "packSize": "-",
      "quantity": 1350
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "packSize": "-",
      "quantity": 30
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "packSize": "-",
      "quantity": 46
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
    </p>
  </div>
  <div
    class="FieldContainer"
  >
    <div
      class="head"
    >
      <h6
        class="MuiTypography-root Typography MuiTypography-h6"
      >
        Ventilation
      </h6>
    </div>
    <p>
      {
  "rows": [
    {
      "category": "ventilation",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "packSize": "-",
      "quantity": 1
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
    </p>
  </div>
  <div
    class="FieldContainer"
  >
    <div
      class="head"
    >
      <h6
        class="MuiTypography-root Typography MuiTypography-h6"
      >
        Accessories
      </h6>
    </div>
    <p>
      {
  "rows": [
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "packSize": "-",
      "quantity": 2
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "packSize": "-",
      "quantity": 100
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "packSize": "-",
      "quantity": 2
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "packSize": "-",
      "quantity": 100
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Test Guttering Grey",
      "externalProductCode": "4391",
      "packSize": "-",
      "quantity": 10
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Test Guttering Hook Grey",
      "externalProductCode": "4392",
      "packSize": "-",
      "quantity": 14
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "packSize": "-",
      "quantity": 2
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Clips",
      "externalProductCode": "113456781",
      "packSize": "-",
      "quantity": 92
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "packSize": "-",
      "quantity": 92
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "packSize": "-",
      "quantity": 267
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Screw",
      "externalProductCode": "113456784",
      "packSize": "-",
      "quantity": 1249
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "packSize": "-",
      "quantity": 1
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "packSize": "-",
      "quantity": 6
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "packSize": "-",
      "quantity": 0
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
    </p>
  </div>
  <div
    class="Alert Alert--first"
  >
    <div
      class="Alert ColorPair ColorPair--alert"
    >
      <div
        class="actions"
      />
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <h5
            class="MuiTypography-root title Typography MuiTypography-h5"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
              />
            </svg>
            Quantities update
          </h5>
          Changing the quantities may affect the accuracy of the estimates.
        </div>
      </div>
    </div>
  </div>
  <div
    class="Alert Alert--last"
  >
    <div
      class="Alert ColorPair ColorPair--alabaster"
    >
      <div
        class="actions"
      />
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <h5
            class="MuiTypography-root title Typography MuiTypography-h5"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
            Need to know
          </h5>
          We’ve added a wastage contingency of: 0% into this material calculation.
        </div>
      </div>
    </div>
  </div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained Button MuiButton-containedPrimary"
    style="margin-bottom: 30px;"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <span
        class="MuiButton-startIcon MuiButton-iconSizeMedium"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z"
          />
        </svg>
      </span>
      Download as PDF
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
  <div
    class="FieldContainer"
  >
    <h3
      class="MuiTypography-root Typography MuiTypography-h3"
    >
      Measurements (showing because debugging mode is ON)
    </h3>
    <h4
      class="MuiTypography-root Typography MuiTypography-h4"
    >
      Lines
    </h4>
    <ul>
      <li>
        <b>
          ridge
          :
        </b>
         
        1500.00
      </li>
      <li>
        <b>
          eave
          :
        </b>
         
        900.00 | 900.00 | 1500.00 | 1500.00
      </li>
      <li>
        <b>
          leftVerge
          :
        </b>
         
        505.05 | 505.05
      </li>
      <li>
        <b>
          rightVerge
          :
        </b>
         
        505.05 | 505.05
      </li>
    </ul>
    <h4
      class="MuiTypography-root Typography MuiTypography-h4"
    >
      Faces
    </h4>
    <ul>
      <li>
        <b>
          face 
          1
           battens (width):
        </b>
         
        1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00
      </li>
      <li>
        <b>
          face 
          2
           battens (width):
        </b>
         
        1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00 | 1500.00
      </li>
    </ul>
  </div>
</div>
`;

exports[`PitchedRoofCalculator Results component renders with default ridge 1`] = `
<div>
  <div
    class="FieldContainer"
  >
    <div
      class="head"
    >
      <h6
        class="MuiTypography-root Typography MuiTypography-h6"
      >
        Tiles
      </h6>
    </div>
    <p>
      {
  "rows": [
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "packSize": "-",
      "quantity": 1350
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "packSize": "-",
      "quantity": 30
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "packSize": "-",
      "quantity": 46
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
    </p>
  </div>
  <div
    class="FieldContainer"
  >
    <div
      class="head"
    >
      <h6
        class="MuiTypography-root Typography MuiTypography-h6"
      >
        Ventilation
      </h6>
    </div>
    <p>
      {
  "rows": [
    {
      "category": "ventilation",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "packSize": "-",
      "quantity": 1
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
    </p>
  </div>
  <div
    class="FieldContainer"
  >
    <div
      class="head"
    >
      <h6
        class="MuiTypography-root Typography MuiTypography-h6"
      >
        Accessories
      </h6>
    </div>
    <p>
      {
  "rows": [
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "packSize": "-",
      "quantity": 2
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "packSize": "-",
      "quantity": 100
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "packSize": "-",
      "quantity": 2
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "packSize": "-",
      "quantity": 100
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Test Guttering Grey",
      "externalProductCode": "4391",
      "packSize": "-",
      "quantity": 10
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Test Guttering Hook Grey",
      "externalProductCode": "4392",
      "packSize": "-",
      "quantity": 14
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "packSize": "-",
      "quantity": 2
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Clips",
      "externalProductCode": "113456781",
      "packSize": "-",
      "quantity": 92
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "packSize": "-",
      "quantity": 92
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "packSize": "-",
      "quantity": 267
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Screw",
      "externalProductCode": "113456784",
      "packSize": "-",
      "quantity": 1249
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "packSize": "-",
      "quantity": 1
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "packSize": "-",
      "quantity": 6
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "packSize": "-",
      "quantity": 0
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
    </p>
  </div>
  <div
    class="Alert Alert--first"
  >
    <div
      class="Alert ColorPair ColorPair--alert"
    >
      <div
        class="actions"
      />
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <h5
            class="MuiTypography-root title Typography MuiTypography-h5"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
              />
            </svg>
            Quantities update
          </h5>
          Changing the quantities may affect the accuracy of the estimates.
        </div>
      </div>
    </div>
  </div>
  <div
    class="Alert Alert--last"
  >
    <div
      class="Alert ColorPair ColorPair--alabaster"
    >
      <div
        class="actions"
      />
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <h5
            class="MuiTypography-root title Typography MuiTypography-h5"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
            Need to know
          </h5>
          We’ve added a wastage contingency of: 0% into this material calculation.
        </div>
      </div>
    </div>
  </div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained Button MuiButton-containedPrimary"
    style="margin-bottom: 30px;"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <span
        class="MuiButton-startIcon MuiButton-iconSizeMedium"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z"
          />
        </svg>
      </span>
      Download as PDF
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`PitchedRoofCalculator Results component renders with main tile as verge 1`] = `
<div>
  <div
    class="FieldContainer"
  >
    <div
      class="head"
    >
      <h6
        class="MuiTypography-root Typography MuiTypography-h6"
      >
        Tiles
      </h6>
    </div>
    <p>
      {
  "rows": [
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "packSize": "-",
      "quantity": 1350
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "packSize": "-",
      "quantity": 30
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "packSize": "-",
      "quantity": 46
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
    </p>
  </div>
  <div
    class="FieldContainer"
  >
    <div
      class="head"
    >
      <h6
        class="MuiTypography-root Typography MuiTypography-h6"
      >
        Ventilation
      </h6>
    </div>
    <p>
      {
  "rows": [
    {
      "category": "ventilation",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "packSize": "-",
      "quantity": 1
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
    </p>
  </div>
  <div
    class="FieldContainer"
  >
    <div
      class="head"
    >
      <h6
        class="MuiTypography-root Typography MuiTypography-h6"
      >
        Accessories
      </h6>
    </div>
    <p>
      {
  "rows": [
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Test Guttering Grey",
      "externalProductCode": "4391",
      "packSize": "-",
      "quantity": 10
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Test Guttering Hook Grey",
      "externalProductCode": "4392",
      "packSize": "-",
      "quantity": 14
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Downpipe",
      "externalProductCode": "33332",
      "packSize": "-",
      "quantity": 2
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Downpipe Connector",
      "externalProductCode": "33331",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Clips",
      "externalProductCode": "113456781",
      "packSize": "-",
      "quantity": 92
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "packSize": "-",
      "quantity": 92
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "packSize": "-",
      "quantity": 267
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Screw",
      "externalProductCode": "113456784",
      "packSize": "-",
      "quantity": 1249
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "packSize": "-",
      "quantity": 1
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "packSize": "-",
      "quantity": 6
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "packSize": "-",
      "quantity": 0
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
    </p>
  </div>
  <div
    class="Alert Alert--first"
  >
    <div
      class="Alert ColorPair ColorPair--alert"
    >
      <div
        class="actions"
      />
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <h5
            class="MuiTypography-root title Typography MuiTypography-h5"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
              />
            </svg>
            Quantities update
          </h5>
          Changing the quantities may affect the accuracy of the estimates.
        </div>
      </div>
    </div>
  </div>
  <div
    class="Alert Alert--last"
  >
    <div
      class="Alert ColorPair ColorPair--alabaster"
    >
      <div
        class="actions"
      />
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <h5
            class="MuiTypography-root title Typography MuiTypography-h5"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
            Need to know
          </h5>
          We’ve added a wastage contingency of: 0% into this material calculation.
        </div>
      </div>
    </div>
  </div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained Button MuiButton-containedPrimary"
    style="margin-bottom: 30px;"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <span
        class="MuiButton-startIcon MuiButton-iconSizeMedium"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z"
          />
        </svg>
      </span>
      Download as PDF
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`PitchedRoofCalculator Results component renders with no guttering 1`] = `
<div>
  <div
    class="FieldContainer"
  >
    <div
      class="head"
    >
      <h6
        class="MuiTypography-root Typography MuiTypography-h6"
      >
        Tiles
      </h6>
    </div>
    <p>
      {
  "rows": [
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector main tile black",
      "externalProductCode": "46035712",
      "packSize": "-",
      "quantity": 1350
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda Protector half tile black",
      "externalProductCode": "46035795",
      "packSize": "-",
      "quantity": 30
    },
    {
      "category": "tiles",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_ridge tile black",
      "externalProductCode": "46035761",
      "packSize": "-",
      "quantity": 46
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
    </p>
  </div>
  <div
    class="FieldContainer"
  >
    <div
      class="head"
    >
      <h6
        class="MuiTypography-root Typography MuiTypography-h6"
      >
        Ventilation
      </h6>
    </div>
    <p>
      {
  "rows": [
    {
      "category": "ventilation",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ventilation Hood 1",
      "externalProductCode": "100456781",
      "packSize": "-",
      "quantity": 1
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
    </p>
  </div>
  <div
    class="FieldContainer"
  >
    <div
      class="head"
    >
      <h6
        class="MuiTypography-root Typography MuiTypography-h6"
      >
        Accessories
      </h6>
    </div>
    <p>
      {
  "rows": [
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black left start",
      "externalProductCode": "86035763",
      "packSize": "-",
      "quantity": 2
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black left",
      "externalProductCode": "86035761",
      "packSize": "-",
      "quantity": 100
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black right start",
      "externalProductCode": "86035764",
      "packSize": "-",
      "quantity": 2
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Zanda_Protector_verge metal flush black right",
      "externalProductCode": "86035762",
      "packSize": "-",
      "quantity": 100
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Clips",
      "externalProductCode": "113456781",
      "packSize": "-",
      "quantity": 92
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Ridge and Hip Screw",
      "externalProductCode": "113456782",
      "packSize": "-",
      "quantity": 92
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Long Screw",
      "externalProductCode": "113456783",
      "packSize": "-",
      "quantity": 267
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Screw",
      "externalProductCode": "113456784",
      "packSize": "-",
      "quantity": 1249
    },
    {
      "category": "accessories",
      "image": "f4420511632ec8f82eb7b56aff3a072b.jpg",
      "description": "Finishing Kit",
      "externalProductCode": "113456786",
      "packSize": "-",
      "quantity": 1
    },
    {
      "category": "accessories",
      "image": "path-to-image",
      "description": "Underlay Divoroll TOP RU",
      "externalProductCode": "26583450",
      "packSize": "-",
      "quantity": 3
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Fuglelist ventilert",
      "externalProductCode": "5555551",
      "packSize": "-",
      "quantity": 6
    },
    {
      "category": "accessories",
      "image": "893ed88a9339cf3c629e614a923f7c1c.jpg",
      "description": "Other accesories example",
      "externalProductCode": "5555550",
      "packSize": "-",
      "quantity": 0
    }
  ],
  "title": "Product",
  "packSize": "Pack size",
  "externalProductCode": "Nobb no",
  "quantity": "Quantity",
  "remove": "Remove"
}
    </p>
  </div>
  <div
    class="Alert Alert--first"
  >
    <div
      class="Alert ColorPair ColorPair--alert"
    >
      <div
        class="actions"
      />
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <h5
            class="MuiTypography-root title Typography MuiTypography-h5"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
              />
            </svg>
            Quantities update
          </h5>
          Changing the quantities may affect the accuracy of the estimates.
        </div>
      </div>
    </div>
  </div>
  <div
    class="Alert Alert--last"
  >
    <div
      class="Alert ColorPair ColorPair--alabaster"
    >
      <div
        class="actions"
      />
      <div
        class="Container"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl"
        >
          <h5
            class="MuiTypography-root title Typography MuiTypography-h5"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root icon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
              />
            </svg>
            Need to know
          </h5>
          We’ve added a wastage contingency of: 0% into this material calculation.
        </div>
      </div>
    </div>
  </div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-contained Button MuiButton-containedPrimary"
    style="margin-bottom: 30px;"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <span
        class="MuiButton-startIcon MuiButton-iconSizeMedium"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-8.5 7.5c0 .83-.67 1.5-1.5 1.5H9v2H7.5V7H10c.83 0 1.5.67 1.5 1.5v1zm5 2c0 .83-.67 1.5-1.5 1.5h-2.5V7H15c.83 0 1.5.67 1.5 1.5v3zm4-3H19v1h1.5V11H19v2h-1.5V7h3v1.5zM9 9.5h1v-1H9v1zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4V6zm10 5.5h1v-3h-1v3z"
          />
        </svg>
      </span>
      Download as PDF
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;
